--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "dmstringer",
   "dependencies": {
     "express": "4.17.1",
+    "hbs": "4.1.1",
     "knex": "0.21.1",
     "pg": "8.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.3"
   }
 }
